# fastapi-turbo

./: .gitignore  CLAUDE.md  COMPATIBILITY.md  Cargo.toml  LICENSE  Makefile  README.md  benchmarks.md  gaps.md  gaps_200.md  modules_used_top_200.md  pyproject.toml  spec.md  todos.md
.github/workflows/: ci.yml  release.yml
benches/: bench_ws.py
benchmarks/: bench_hello.py  dbm.tsv  latest_bench.md  rm.tsv  roadmap.md  run_bench.py  sqla.tsv  v3.tsv
comparison/: fastapi_app.py  fastapi_rs_app.py  fastapi_turbo_app.py
comparison/bench-app/: _bench_row.sh  _resolve_py_rs.sh  audit_qwen.py  audit_qwen_test.py  audit_vllm_sglang.py  audit_vllm_sglang_test.py  bench_bg.py  bench_db.py  bench_features_app.py  bench_files.py  bench_post_app.py  bench_scale.py  bench_sse.py  bench_vs_rust.py  bg_fastapi_rs.py  bg_fastapi_turbo.py  bg_go_gin.go  complex_fastapi_rs_app.py  complex_fastapi_turbo_app.py  db_async_psycopg3_app.py  db_fastapi_rs_app.py  db_fastapi_turbo_app.py  db_fastapi_uvicorn_app.py  db_go_gin.go  db_sync_fastapi_rs_app.py  db_sync_fastapi_turbo_app.py  dropin_fastapi_rs.py  dropin_fastapi_turbo.py  dropin_gogin.go  fastapi_app.py  fastapi_rs_app.py  fastapi_turbo_app.py  features_fastify.js  features_go_gin.go  files_fastapi_rs.py  files_fastapi_turbo.py  files_go_gin.go  functional_audit_app.py  functional_audit_test.py  go.mod  (+24 more)
comparison/bench-app/db_fastify/: package-lock.json  package.json  server.js
comparison/bench-app/db_go_echo/: go.mod  go.sum  main.go
comparison/bench-app/db_go_gin/: go.mod  go.sum  main.go
comparison/bench-app/db_rust_axum/: Cargo.toml  main.rs
comparison/bench-app/pure-axum/: Cargo.toml
comparison/bench-app/pure-axum/src/: main.rs
comparison/bench-app/rust-axum-redis/: Cargo.toml
comparison/bench-app/rust-axum-redis/src/: main.rs
comparison/go-echo/: go.mod  main.go
comparison/go-gin/: go.mod  main.go
comparison/node-fastify/: package-lock.json  package.json  server.js
comparison/node-hyper-express/: package-lock.json  package.json  server.js
comparison/rust-axum/: Cargo.toml  main.rs
comparison/ws-bench/: Cargo.toml  echo_fastws.rs  echo_tungstenite.rs
python/fastapi_rs/: __init__.py  _async_bridge.py  _async_worker.py  _compat_shim.py  _introspect.py  _openapi.py  _resolution.py  _starlette_compat.py  _types.py  _utils.py  applications.py  authentication.py  background.py  concurrency.py  datastructures.py  db.py  dependencies.py  encoders.py  exceptions.py  http.py  param_functions.py  requests.py  responses.py  routing.py  security.py  sse.py  staticfiles.py  status.py  templating.py  testclient.py  websockets.py
python/fastapi_turbo/: __init__.py  _async_worker.py  _compat_shim.py  _dependencies_models.py  _introspect.py  _middleware_wrap.py  _openapi.py  _resolution.py  _route_helpers.py  _sentry_compat.py  _starlette_compat.py  _utils.py  _ws_pipe_bridge.py  applications.py  authentication.py  background.py  concurrency.py  datastructures.py  db.py  dependencies.py  encoders.py  exceptions.py  http.py  param_functions.py  requests.py  responses.py  routing.py  security.py  sse.py  staticfiles.py  status.py  templating.py  testclient.py  websockets.py
scripts/: run_external_compat_gates.sh
src/: config.rs  db_pool.rs  handler_bridge.rs  http_client.rs  lib.rs  multipart.rs  responses.rs  router.rs  server.rs  streaming.rs  websocket.rs
tests/: conftest.py  test_asgi_sentry_stack.py  test_async.py  test_compat.py  test_datastructures.py  test_deep_audit_middleware_ws.py  test_depends.py  test_fastapi_compat.py  test_files.py  test_hello.py  test_http_client_httpx_parity.py  test_middleware.py  test_new_features.py  test_openapi.py  test_p0_fixes.py  test_p0_parity.py  test_p1_features.py  test_p1_parity.py  test_p2_features.py  test_r52_audit_fixes.py  test_routing.py  test_streaming.py  test_testclient.py  test_websocket.py
tests/parity/: conftest.py  parity_app.py  parity_app_2.py  parity_app_3.py  parity_app_4.py  parity_app_deep_behavior.py  parity_app_deep_behavior_r2.py  parity_app_deep_integration.py  parity_app_deep_schema.py  parity_app_deep_schema_r2.py  parity_app_deep_validation.py  parity_app_deep_validation_r2.py  parity_app_redis.py  parity_app_redis_async.py  parity_app_sqla_asyncpg.py  parity_app_sqla_psycopg2.py  parity_app_sqla_psycopg3.py  parity_app_websocket.py  run_deep_behavior_parity.py  run_deep_behavior_parity_r2.py  run_deep_integration_parity.py  run_deep_schema_parity.py  run_deep_schema_parity_r2.py  run_deep_validation_parity.py  run_deep_validation_parity_r2.py  run_parity.py  run_parity_2.py  run_parity_3.py  run_parity_4.py  run_redis_parity.py  run_sqla_parity.py  run_websocket_parity.py  sqla_async_app.py  sqla_common.py  sqla_sync_app.py  test_parity.py
tests/stress/: test_asgi_adapter_fidelity.py  test_asgi_in_process.py  test_asgi_in_process_deps.py  test_asgi_in_process_form.py  test_asgi_in_process_http_mw.py  test_asgi_in_process_mounts.py  test_asgi_in_process_mw.py  test_asgi_in_process_parity_contract.py  test_asgi_in_process_response_model.py  test_asgi_in_process_security_scopes.py  test_asgi_in_process_streaming.py  test_asgi_in_process_ws.py  test_async_client_shorthand.py  test_bench_cli_compat.py  test_bench_cli_correctness.py  test_bench_runner_parser.py  test_body_size_cap.py  test_broad_starlette_parity.py  test_concurrent_clients.py  test_dataclass_typeddict_response.py  test_decimal_serialization.py  test_declared_deps.py  test_depends_scope.py  test_file_response_directory_and_defaults.py  test_file_response_filename_encoding.py  test_file_response_in_process.py  test_file_response_range_in_process.py  test_file_response_range_streaming.py  test_file_response_stat_headers.py  test_file_response_streaming.py  test_head_options_parity.py  test_json_string_escape.py  test_multi_range.py  test_multi_range_cap.py  test_multi_range_no_full_file_buffer.py  test_multipart_streaming.py  test_no_global_monkeypatch.py  test_openapi_union_body_regression.py  test_operation_id_and_unique_fn.py  test_options_allow_determinism.py  (+56 more)
(+39 files in other folders)
