[package]
name = "fastapi-rs"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "_fastapi_rs_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["auto-initialize", "extension-module"] }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
fastwebsockets = { version = "0.8", features = ["upgrade"] }
hyper-util = { version = "0.1", features = ["tokio"] }
bytes = "1"
http = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-full"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[[bin]]
name = "fastapi-rs-bench"
path = "benches/bench_client.rs"
