[package]
name = "fastapi-turbo"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "_fastapi_turbo_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["auto-initialize", "extension-module"] }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
fastwebsockets = { version = "0.8", features = ["upgrade"] }
hyper-util = { version = "0.1", features = ["tokio"] }
bytes = "1"
tokio-postgres = "0.7"
bb8 = "0.9"
bb8-postgres = "0.9"
http = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-full", "fs", "validate-request", "set-header", "limit"] }
multer = "3"
mime_guess = "2"
url = "2"
memchr = "2"
reqwest = { version = "0.12", default-features = false, features = [
    "cookies", "gzip", "brotli", "deflate", "zstd",
    "socks", "rustls-tls", "http2", "multipart", "stream", "json",
] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[[bin]]
name = "fastapi-turbo-bench"
path = "src/bin/bench_client.rs"
