[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "fastapi-turbo"
version = "0.1.0"
description = "FastAPI-compatible Python web framework powered by Rust Axum"
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"
keywords = ["web", "framework", "fastapi", "rust", "axum", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
templates = ["jinja2>=3.1"]
all = ["jinja2>=3.1"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "fastapi_turbo._fastapi_turbo_core"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
