[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "fastapi-turbo"
version = "0.1.0"
description = "FastAPI-compatible Python web framework powered by Rust Axum"
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"
keywords = ["web", "framework", "fastapi", "rust", "axum", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "pydantic>=2.0",
    # Core runtime deps that are NOT optional:
    # - httpx powers ``fastapi_turbo.testclient.TestClient`` (real-HTTP
    #   client) and the Sentry/ASGI transport fallback path.
    # - websockets powers ``TestClient.websocket_connect`` and the
    #   WebSocket client library re-exported by the shim.
    "httpx>=0.27",
    "websockets>=12",
    # ``python-multipart`` is required for ``Form``/``File`` body parsing.
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# Jinja2 for ``fastapi_turbo.templating.Jinja2Templates``.
templates = ["jinja2>=3.1"]
# Postgres + Redis helpers under ``fastapi_turbo.db``.
db = [
    "psycopg[binary,pool]>=3.1",
    "redis[hiredis]>=5.0",
]
# Meta extra — pulls everything. Mirrors FastAPI's ``[all]`` convention.
all = [
    "jinja2>=3.1",
    "psycopg[binary,pool]>=3.1",
    "redis[hiredis]>=5.0",
    "orjson>=3.9",
    "ujson>=5.8",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "websockets>=12",
    "ruff>=0.3",
    "jinja2>=3.1",
    "psycopg[binary,pool]>=3.1",
    "redis[hiredis]>=5.0",
    "sentry-sdk>=2.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "fastapi_turbo._fastapi_turbo_core"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# Production code is held to *correctness* rules only — unused imports
# and cosmetic style get cleaned up opportunistically, not gated on CI.
# Expand this set when the codebase is ready for it.
select = [
    "F821", # undefined name
    "F822", # undefined name in __all__
    "F823", # local variable referenced before assignment
    "F706", # return outside function
    "F704", # yield outside function
    "E711", # comparison to None (``== None``)
    "E714", # not-is (``not x is y``)
    "E721", # type() compare instead of isinstance
]

[tool.ruff.lint.per-file-ignores]
# Tests use fixtures, parametrization, and monkey-patching patterns
# that trip stylistic rules without being buggy.
"tests/**" = ["F401", "F811", "F841", "E402", "E741"]
