[package]
name = "axum-bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "axum-bench"
path = "main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
