[package]
name = "db-rust-axum"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "db-axum"
path = "main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
bb8 = "0.9"
bb8-postgres = "0.9"
redis = { version = "0.27", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str", "db-tokio-postgres"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
