[package]
name = "rust-axum-redis"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "redis-axum"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

[profile.release]
lto = true
codegen-units = 1
